--- a/VinciEgg/index.html
+++ b/VinciEgg/index.html
@@ -1,11 +1,14 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<meta charset=utf-8" />
-<title>VinciEgg</title>
+    <meta charset=utf-8"/>
+    <title>VinciEgg</title>
+    <link rel="shortcut icon" href="../img/caihong.jpg" type="image/x-icon">
 </head>
 <body>
-<canvas id="can" onmousedown="bb(event)" onmouseup="cc()" onmousemove="aa(event)"  height="1456px" width="2100px"></canvas>
+<canvas id="can" onmousedown="bb(event)" onmouseup="cc()" onmousemove="aa(event)" height="1456px"
+        width="2100px"></canvas>
 </body>
 <video controls="true" autoplay="true" name="media" loop="true" hidden="true">
     <source src="http://antiserver.kuwo.cn/anti.s?useless=/resource/&format=mp3&rid=MUSIC_221226&response=res&type=convert_url&"
