--- a/seeme/index.html
+++ b/seeme/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>StoneDoors</title>
+  <link rel="shortcut icon" href="../img/caihong.jpg" type="image/x-icon">
 </head>
 <body>
 <div id="oa"></div>
