--- a/shyoo/index.html
+++ b/shyoo/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Shyoo</title>
     <link type="text/css" rel="stylesheet" href="index.css"/>
+    <link rel="shortcut icon" href="../img/caihong.jpg" type="image/x-icon">
 </head>
 <body>
 <video controls="true" autoplay="true" name="media" loop="true" hidden="true"> <source src="http://www.170mv.com/kw/antiserver.kuwo.cn/anti.s?rid=MUSIC_40546680&response=res&format=mp3|aac&type=convert_url&br=128kmp3&agent=iPhone&callback=getlink&jpcallback=getlink.mp3" type="audio/mpeg"></video>
