--- a/noFish/index.html
+++ b/noFish/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset=utf-8" />
     <title>子非鱼</title>
+    <link rel="shortcut icon" href="../img/caihong.jpg" type="image/x-icon">
 </head>
 <body>
 <div>
