--- a/redeem/index.html
+++ b/redeem/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset=utf-8"/>
     <title>今晚蹦迪</title>
+    <link rel="shortcut icon" href="../img/caihong.jpg" type="image/x-icon">
 </head>
 <body>
 <div id="div1"></div>
