--- a/phoenix/index.html
+++ b/phoenix/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>打上火花</title>
+    <title>Phoenix</title>
     <link rel="shortcut icon" href="../img/caihong.jpg" type="image/x-icon">
 </head>
 <body>
 <canvas id="canvas"></canvas>
 <video controls="true" autoplay="true" name="media" loop="true" hidden="true">
-    <source src="http://www.170mv.com/kw/antiserver.kuwo.cn/anti.s?rid=MUSIC_40174955&response=res&format=mp3|aac&type=convert_url&br=128kmp3&agent=iPhone&callback=getlink&jpcallback=getlink.mp3"
+    <source src="http://antiserver.kuwo.cn/anti.s?useless=/resource/&format=mp3&rid=MUSIC_11040998&response=res&type=convert_url&"
             type="audio/mpeg">
 </video>
 <script src="index.js"></script>
